replace loops w/ foreach, fix hljs, squash bugs :P

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,8 +14,10 @@ pre {
   font-size: 1.5rem;
 }
 
-
 // progress bar
-.progress{
+.progress {
   margin: 2rem 0;
+}
+
+.custom-radio {
 }
